# docs/swagger.yaml
@@ -30,6 +30,11 @@ definitions:
     - email
     - otp
     type: object
+  request.PlayerLevelRewardCollectRequest:
+    properties:
+      level:
+        type: integer
+    type: object
   request.RestPasswordRequest:
     properties:
       email:
@@ -119,6 +124,99 @@ paths:
       summary: Verifies OTP
       tags:
       - Authentication
+  /get_level_rewards:
+    get:
+      consumes:
+      - application/json
+      description: Gets the rewards according to player level
+      parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Login successful
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Gets reward list
+      tags:
+      - Player
+  /get_settings:
+    get:
+      consumes:
+      - application/json
+      description: Gets the current settings of that player
+      parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sucess
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Gets the settings
+      tags:
+      - Player
+  /level_reward_collect:
+    post:
+      consumes:
+      - application/json
+      description: Collects the reward for a level of that player
+      parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Player Details
+        in: body
+        name: loginDetails
+        required: true
+        schema:
+          $ref: '#/definitions/request.PlayerLevelRewardCollectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Login successful
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Collects Reward
+      tags:
+      - Player
   /reset-password:
     post:
       consumes:
@@ -208,12 +306,81 @@ paths:
       summary: Get player game stats
       tags:
       - Player
+  /store:
+    get:
+      consumes:
+      - application/json
+      description: Gets shop details
+      parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sucess
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Gets shop details
+      tags:
+      - Player
+  /update_settings:
+    put:
+      consumes:
+      - application/json
+      description: Updates the game settings of that player
+      parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Player Details
+        in: body
+        name: loginDetails
+        required: true
+        schema:
+          $ref: '#/definitions/request.PlayerLevelRewardCollectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sucess
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Success'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Success'
+      summary: Updates setting
+      tags:
+      - Player
   /userData:
     post:
       consumes:
       - application/json
       description: Updates player info like username and avatar
       parameters:
+      - description: Player Access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Player Details
         in: body
         name: loginDetails
